; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/extr_ec_ameth.c_eckey_param_decode.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/extr_ec_ameth.c_eckey_param_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EC_F_ECKEY_PARAM_DECODE = common dso_local global i32 0, align 4
@ERR_R_EC_LIB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**, i32)* @eckey_param_decode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eckey_param_decode(i32* %0, i8** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8**, i8*** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = call i32* @d2i_ECParameters(i32* null, i8** %9, i32 %10)
  store i32* %11, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i32, i32* @EC_F_ECKEY_PARAM_DECODE, align 4
  %15 = load i32, i32* @ERR_R_EC_LIB, align 4
  %16 = call i32 @ECerr(i32 %14, i32 %15)
  store i32 0, i32* %4, align 4
  br label %21

17:                                               ; preds = %3
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @EVP_PKEY_assign_EC_KEY(i32* %18, i32* %19)
  store i32 1, i32* %4, align 4
  br label %21

21:                                               ; preds = %17, %13
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32* @d2i_ECParameters(i32*, i8**, i32) #1

declare dso_local i32 @ECerr(i32, i32) #1

declare dso_local i32 @EVP_PKEY_assign_EC_KEY(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
